--- a/RayTracing/RayTracing.vcxproj.filters
+++ b/RayTracing/RayTracing.vcxproj.filters
@@ -13,123 +13,207 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="头文件\ui">
-      <UniqueIdentifier>{49b7c004-ea02-4ef1-ae2c-65a7b9a8e476}</UniqueIdentifier>
-    </Filter>
     <Filter Include="源文件\ui">
-      <UniqueIdentifier>{5128355d-8a07-4e5c-9f71-730b2a6cd7f7}</UniqueIdentifier>
+      <UniqueIdentifier>{d071bc4e-b3b0-4244-a387-68d9be63fc22}</UniqueIdentifier>
     </Filter>
-    <Filter Include="imgui">
-      <UniqueIdentifier>{af7f707f-7928-4452-80b9-75f0c8c89f19}</UniqueIdentifier>
+    <Filter Include="头文件\ui">
+      <UniqueIdentifier>{e2f7e6fb-e5ed-423a-b262-2640539ce5bc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="头文件\scene">
+      <UniqueIdentifier>{f9ada022-4559-4aa0-af94-303eff444dd8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\scene">
+      <UniqueIdentifier>{cf8d1b53-ec0f-4173-8cae-4a362bc2a9ed}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="头文件\fileio">
+      <UniqueIdentifier>{562323f4-6fc7-47a0-b785-852bad72906d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="头文件\sceneObjects">
+      <UniqueIdentifier>{4734d225-7aa5-4186-8282-f842c8bb49b5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\sceneObjects">
+      <UniqueIdentifier>{c2ee907d-4ee9-4060-80a0-68b8449c6c60}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\fileio">
+      <UniqueIdentifier>{0fd664e4-ac07-470c-8a33-3728706afda8}</UniqueIdentifier>
     </Filter>
     <Filter Include="头文件\vecmath">
-      <UniqueIdentifier>{2358a652-b2fe-46ec-b316-6b79e2523a83}</UniqueIdentifier>
+      <UniqueIdentifier>{a44230cd-8591-4884-87f6-8381ccb6b84a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="imgui">
+      <UniqueIdentifier>{cf331857-802e-4bd1-9c9b-faa3be4b9bb0}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui.cpp">
-      <Filter>imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_demo.cpp">
-      <Filter>imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_draw.cpp">
-      <Filter>imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_impl_glfw.cpp">
-      <Filter>imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_impl_opengl3.cpp">
-      <Filter>imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_widgets.cpp">
-      <Filter>imgui</Filter>
-    </ClCompile>
     <ClCompile Include="..\OpenGL\include\glad\glad.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="imgui\imgui_impl_win32.cpp">
+    <ClCompile Include="src\ui\GraphicalUI.cpp">
+      <Filter>源文件\ui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\ModelerCamera.cpp">
+      <Filter>源文件\ui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\TraceGLWindow.cpp">
+      <Filter>源文件\ui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\TraceUI.cpp">
+      <Filter>源文件\ui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\scene\AABB.cpp">
+      <Filter>源文件\scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\scene\BVH_Node.cpp">
+      <Filter>源文件\scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\scene\Camera.cpp">
+      <Filter>源文件\scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\scene\Hitable.cpp">
+      <Filter>源文件\scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\scene\Material.cpp">
+      <Filter>源文件\scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\scene\Ray.cpp">
+      <Filter>源文件\scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\scene\Scene.cpp">
+      <Filter>源文件\scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\fileio\imageio.cpp">
+      <Filter>源文件\fileio</Filter>
+    </ClCompile>
+    <ClCompile Include="src\sceneObjects\Box.cpp">
+      <Filter>源文件\sceneObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="src\sceneObjects\Sphere.cpp">
+      <Filter>源文件\sceneObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="src\main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\RayTracer.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\util.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\imgui\imgui.cpp">
       <Filter>imgui</Filter>
     </ClCompile>
-    <ClCompile Include="ui\GraphicalUI.cpp">
-      <Filter>源文件\ui</Filter>
+    <ClCompile Include="src\imgui\imgui_demo.cpp">
+      <Filter>imgui</Filter>
     </ClCompile>
-    <ClCompile Include="ui\TraceGLWindow.cpp">
-      <Filter>源文件\ui</Filter>
+    <ClCompile Include="src\imgui\imgui_draw.cpp">
+      <Filter>imgui</Filter>
     </ClCompile>
-    <ClCompile Include="ui\TraceUI.cpp">
-      <Filter>源文件\ui</Filter>
+    <ClCompile Include="src\imgui\imgui_impl_glfw.cpp">
+      <Filter>imgui</Filter>
     </ClCompile>
-    <ClCompile Include="ui\debuggingView.cpp">
-      <Filter>源文件\ui</Filter>
+    <ClCompile Include="src\imgui\imgui_impl_opengl3.cpp">
+      <Filter>imgui</Filter>
     </ClCompile>
-    <ClCompile Include="ui\debuggingWindow.cpp">
-      <Filter>源文件\ui</Filter>
+    <ClCompile Include="src\imgui\imgui_impl_win32.cpp">
+      <Filter>imgui</Filter>
     </ClCompile>
-    <ClCompile Include="ui\ModelerCamera.cpp">
-      <Filter>源文件\ui</Filter>
+    <ClCompile Include="src\imgui\imgui_widgets.cpp">
+      <Filter>imgui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="imgui\imconfig.h">
-      <Filter>imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imgui.h">
-      <Filter>imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imgui_impl_glfw.h">
-      <Filter>imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imgui_impl_opengl3.h">
-      <Filter>imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imgui_internal.h">
-      <Filter>imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imstb_rectpack.h">
-      <Filter>imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imstb_textedit.h">
-      <Filter>imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imstb_truetype.h">
-      <Filter>imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imgui_impl_win32.h">
-      <Filter>imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="ui\GraphicalUI.h">
+    <ClInclude Include="src\ui\dialog.h">
       <Filter>头文件\ui</Filter>
     </ClInclude>
-    <ClInclude Include="ui\TraceGLWindow.h">
+    <ClInclude Include="src\ui\GraphicalUI.h">
       <Filter>头文件\ui</Filter>
     </ClInclude>
-    <ClInclude Include="ui\TraceUI.h">
+    <ClInclude Include="src\ui\ModelerCamera.h">
       <Filter>头文件\ui</Filter>
     </ClInclude>
-    <ClInclude Include="ui\debuggingView.h">
+    <ClInclude Include="src\ui\TraceGLWindow.h">
       <Filter>头文件\ui</Filter>
     </ClInclude>
-    <ClInclude Include="ui\debuggingWindow.h">
+    <ClInclude Include="src\ui\TraceUI.h">
       <Filter>头文件\ui</Filter>
     </ClInclude>
-    <ClInclude Include="ui\dialog.h">
-      <Filter>头文件\ui</Filter>
+    <ClInclude Include="src\scene\AABB.h">
+      <Filter>头文件\scene</Filter>
     </ClInclude>
-    <ClInclude Include="vecmath\DGM.h">
+    <ClInclude Include="src\scene\BVH_Node.h">
+      <Filter>头文件\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\scene\Camera.h">
+      <Filter>头文件\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\scene\Hitable.h">
+      <Filter>头文件\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\scene\Material.h">
+      <Filter>头文件\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\scene\Ray.h">
+      <Filter>头文件\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\scene\Scene.h">
+      <Filter>头文件\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\scene\Texture.h">
+      <Filter>头文件\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\fileio\CImg.h">
+      <Filter>头文件\fileio</Filter>
+    </ClInclude>
+    <ClInclude Include="src\fileio\imageio.h">
+      <Filter>头文件\fileio</Filter>
+    </ClInclude>
+    <ClInclude Include="src\sceneObjects\Box.h">
+      <Filter>头文件\sceneObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="src\sceneObjects\Sphere.h">
+      <Filter>头文件\sceneObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="src\RayTracer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\util.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vecmath\DGM.h">
       <Filter>头文件\vecmath</Filter>
     </ClInclude>
-    <ClInclude Include="ui\ModelerCamera.h">
-      <Filter>头文件\ui</Filter>
-    </ClInclude>
-    <ClInclude Include="vecmath\mat.h">
+    <ClInclude Include="src\vecmath\mat.h">
       <Filter>头文件\vecmath</Filter>
     </ClInclude>
-    <ClInclude Include="vecmath\vec.h">
+    <ClInclude Include="src\vecmath\vec.h">
       <Filter>头文件\vecmath</Filter>
+    </ClInclude>
+    <ClInclude Include="src\imgui\imconfig.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\imgui\imgui.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\imgui\imgui_impl_glfw.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\imgui\imgui_impl_opengl3.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\imgui\imgui_impl_win32.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\imgui\imgui_internal.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\imgui\imstb_rectpack.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\imgui\imstb_textedit.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\imgui\imstb_truetype.h">
+      <Filter>imgui</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
