--- a/RayTracing/RayTracing.vcxproj.filters
+++ b/RayTracing/RayTracing.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClCompile Include="src\sceneObjects\rect.cpp">
       <Filter>源文件\sceneObjects</Filter>
     </ClCompile>
+    <ClCompile Include="src\sceneObjects\ConstantMedium.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\ui\dialog.h">
@@ -229,6 +232,9 @@
     </ClInclude>
     <ClInclude Include="src\sceneObjects\rect.h">
       <Filter>头文件\sceneObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="src\sceneObjects\ConstantMedium.h">
+      <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
